--- a/templates/login.html
+++ b/templates/login.html
@@ -84,7 +84,7 @@
 
   {% for announcement in custom.announcements %}
     <div class="col-md-8 col-md-offset-2 announcements" >
-      <div class="col-md-6">
+      <div class="col-md-6 col-md-offset-2">
           {{ announcement | safe }}
       </div>
     </div>
