--- a/extra-assets/css/login.css
+++ b/extra-assets/css/login.css
@@ -46,6 +46,10 @@
     padding-bottom: 5px;
     border: 2px dotted orange;
 }
+.announcements-text {
+    padding-left: 5px;
+}
+
 
 .questions {
     margin-top: 12px;
