--- a/templates/login.html
+++ b/templates/login.html
@@ -67,7 +67,7 @@
   <div class="footer">
     <p>
       This service is run transparently from
-      <a href="https://github.com/2i2c-org/pilot-hubs">
+      <a href="https://github.com/2i2c-org/infrastructure">
         github.com/2i2c-org/pilot-hubs
       </a>
     </p>
