--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="text-left">
       <div class="alert alert-info" role="alert">
-        <a href="{{ services.binder.url }}" class="alert-link">Click here to go back to BinderHub</a> and build and launch a new image.
+        <a href='{{ services.["binder"].url }}' class="alert-link">Click here to go back to BinderHub</a> and build and launch a new image.
       </div>
     </div>
   </div>
